SF Primes/src/objects/AMAAP_Strategy_Change_Request__c.object
<CustomObject>
    <description>Automotive Marketing Association Account Plan Strategy Change Request Detail. Lookup to Account Plan.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Plan__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>AMA Account Plan</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>AMAAP Strategy Change Requests</relationshipLabel>
        <relationshipName>AMAAP_Strat_Change_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMAAP Strategy Change Requests</relationshipLabel>
        <relationshipName>AMAAP_Strategy_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <inlineHelpText>Include a clear description of the change request including budgets, the date when this change will go into effect, model information, offer information, etc</inlineHelpText>
        <label>Change Request</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Updated__c</fullName>
        <label>Display Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_2_EMail__c</fullName>
        <label>LMA Analyst 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_Email__c</fullName>
        <label>LMA Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Updated__c</fullName>
        <label>Landing Page Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Updated__c</fullName>
        <label>Media Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Updated__c</fullName>
        <label>Search Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Updated__c</fullName>
        <label>URL Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Video_Updated__c</fullName>
        <label>Video Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WebID__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>AMAAP Strategy Change Requests</relationshipLabel>
        <relationshipName>AMAAP_Strategy_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AMAAP Strategy Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Plan__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>WebID__c</columns>
        <columns>Model__c</columns>
        <columns>Strategy__c</columns>
        <columns>Display_Updated__c</columns>
        <columns>Change_Request__c</columns>
        <columns>Search_Updated__c</columns>
        <columns>Landing_Page_Updated__c</columns>
        <columns>URL_Updated__c</columns>
        <columns>Video_Updated__c</columns>
        <columns>Media_Updated__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMAAP Strategy Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>